<resources>
    <string name="app_name" translatable="false">Vanasree</string>
    <string name="splash_note2" translatable="false">Developed and Maintained by Gisfy Pvt Ltd for Vanasree</string>
    <string name="email" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="welcomenote" translatable="false">Welcome</string>
    <string name="title_collectors_list" translatable="false">Kishore Kethineni</string>
    <string name="title2_collectors_list" translatable="false">Thiruvananthapuram</string>
    <string name="title3_collectors_list" translatable="false">Kerala Forest Department is a law enforcement agency for the state of Kerala, India. Over 75% of the land area of Kerala was covered by forests until the 18th century.</string>
    <string name="default_notification_channel_id" translatable="false">DefaultFCMChannel</string>
    <string name="basicdetails" translatable="false">Basic Details</string>
    <string name="vssname" translatable="false">VSS Name*</string>
    <string name="divisionname" translatable="false">Division Name*</string>
    <string name="rangename" translatable="false">Range Name*</string>
    <string name="villagename" translatable="false">Village Name*</string>
    <string name="collectorname" translatable="false">Collector Name*</string>
    <string name="collectornamep" translatable="false">Collector Name</string>
    <string name="spoucename" translatable="false">Spouse Name*</string>
    <string name="spoucenamep" translatable="true">Spouse Name</string>
    <string name="socialcat" translatable="false">Select Social Category*</string>
    <string name="age" translatable="false">Age*</string>
    <string name="gender" translatable="false">Select Gender*</string>
    <string name="dob" translatable="false">DOB*</string>
    <string name="idtype" translatable="false">Select ID type*</string>
    <string name="idno" translatable="false">ID No.*</string>
    <string name="selectntfps" translatable="false">You need to select NTFP\'s*</string>
    <string name="educational" translatable="false">Educational Qualification*</string>
    <string name="familymem" translatable="false">Total No of Family Members*</string>
    <string name="bankname" translatable="false">Bank Name</string>
    <string name="accno" translatable="false">Account No</string>
    <string name="ifsc" translatable="false">IFSC</string>
    <string name="username" translatable="false">User Name*</string>
    <string name="info" translatable="false">Other relavent info</string>
    <string name="addcollector" translatable="false">Add Collector</string>
    <string name="importexcel" translatable="false">Add from Excel</string>
    <string name="imports" translatable="false">Import</string>
    <string name="collectorList" translatable="false">Collector List</string>
    <string name="stockdetails" translatable="false">Item Details</string>
    <string name="selectcollector" translatable="false">Select Collector*</string>
    <string name="measurement" translatable="false">Unit of Measurement*</string>
    <string name="quality" translatable="false">Quantity</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="piechart" translatable="false">PieChart Data</string>
    <string name="barchart" translatable="false">BarChart Data</string>
    <string name="linechart" translatable="false">LineChart Data</string>
    <string name="amountpaid" translatable="false">Estimated Amount(Rs)*</string>
    <string name="addinv" translatable="false">Add Item</string>
    <string name="listinv" translatable="false">List Inventories</string>
    <string name="paymentdetails" translatable="false">Payment Details</string>
    <string name="addPayment" translatable="false">Add Payment</string>
    <string name="amountrecieved" translatable="false">Amount Received</string>
    <string name="amountrecievedfrom" translatable="false">Amount Received from</string>
    <string name="thirparty" translatable="false">Third-Party</string>
    <string name="stsociety" translatable="false">S.T. Society</string>
    <string name="societyname" translatable="false">Society Name*</string>
    <string name="updatepayment" translatable="false">Update Payment Details</string>
    <string name="listpayment" translatable="false">Payment List</string>
    <string name="transitrequest" translatable="false">Transit Request</string>
    <string name="swipeup" translatable="false">Swipe Up</string>
    <string name="selectrfo" translatable="false">Select RFO for transit permission*</string>
    <string name="requesttransitpass" translatable="false">Request Transit</string>
    <string name="shipmentdetails" translatable="false">Shipment Details</string>
    <string name="selecttransitpass" translatable="false">Select Transit Request*</string>
    <string name="selectprocessingcenter" translatable="false">Select Processing Center*</string>
    <string name="meansoftransportation" translatable="false">Means of transportation*</string>
    <string name="vehicleno" translatable="false">Vehicle No.</string>
    <string name="addshipment" translatable="false">Add Shipment</string>
    <string name="shipmentList" translatable="false">Shipment List</string>
    <string name="collectors" translatable="false">Collector</string>
    <string name="inventory" translatable="false">Item</string>
    <string name="shipment" translatable="false">Shipments</string>
    <string name="payment" translatable="false">Payments</string>
    <string name="viewcollecotrs" translatable="false">View Collectors</string>
    <string name="viewstocks" translatable="false">View Stocks</string>
    <string name="addtransitrequest" translatable="false">Add Transit Request</string>
    <string name="viewtransit" translatable="false">View Transit Requests</string>
    <string name="viewshipment" translatable="false">View Shipment</string>
    <string name="newpayments" translatable="false">Make Payments</string>
    <string name="paymentsrecieved" translatable="false">Add Payments Received</string>
    <string name="viewpayments" translatable="false">View Payments Received</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="division" translatable="false">"Division "</string>
    <string name="range" translatable="false">"Range "</string>
    <string name="village" translatable="false">"Village "</string>
    <string name="vss" translatable="false">"VSS Name: "</string>
    <string name="vsshead" translatable="false">VSS Secretary</string>
    <string name="phoneno" translatable="false">Phone Number</string>
    <string name="unabletofetch">Unable to fetch details</string>
    <string name="somethingwentwrong">Some thing went wrong</string>
    <string name="updatecollector">Update Collector</string>
    <string name="ack1" translatable="false">Acknowledgements Data (from PROCESSING CENTER to VSS)</string>
    <string name="ack2" translatable="false">Acknowledgements Data (from PROCESSING CENTER to DFO)</string>
    <string name="transitlist" translatable="false">Transit List</string>
    <string name="todfo" translatable="false">Processing centre acknowledgments</string>
    <string name="tovss" translatable="false">PC to VSS List</string>
    <string name="transitpass" translatable="false">Transit Request</string>
    <string name="retake">Retake</string>
    <string name="storagepermission">Permission Required</string>
    <string name="add">Add</string>
    <string name="avss">AVSS Pottomavu</string>
    <string name="venkala">Venkola P.O, Pin:691541,</string>
    <string name="registration">Register Number: 561 2/2001–02,</string>
    <string name="pottamvu">Pottomavu</string>
    <string name="passno">"Pass No.: "</string>
    <string name="mfp">MFP Collection Pass</string>
    <string name="nameandaddress"><![CDATA[Name &amp; Address]]></string>
    <string name="wheretogo">Where to go</string>
    <string name="datefromto">Date From/To</string>
    <string name="xyzcollector">XYZ Collector\nVenkala P.O,\nPottomavu</string>
    <string name="daterange">03-02-2021\n05-02-2021</string>
    <string name="president">President</string>
    <string name="secretary">Secretary</string>
    <string name="generatepdf">Generate PDF</string>
    <string name="trainingmaterials">Training Materials</string>
    <string name="sustainableharvesting">Sustainable Harvesting</string>
    <string name="name">"Name "</string>
    <string name="xyz">XYZ Collector</string>
    <string name="aadhar">Aadhar Card</string>
    <string name="idcard">ID Card</string>
    <string name="clickagain">Click again to exit</string>
    <string name="goodmorning">Welcome,</string>
    <string name="ack">Acknowledgements</string>
    <string name="learnings">Learning\'s</string>
    <string name="passes">User Account Details</string>
    <string name="menu">Menu</string>
    <string name="submenu">Sub Menu</string>
    <string name="pass">Pass</string>
    <string name="materials">Materials</string>
    <string name="tutorials">Tutorials</string>
    <string name="pleaseselectlang">Please select language</string>
    <string name="selectrole">You need to select role</string>
    <string name="incharge">RFOIncharge</string>
    <string name="inchargeno">Incharge No</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="required">" is required"</string>
    <string name="selectanyoption">please select any option from list</string>
    <string name="nointernet">No Internet Connection..</string>
    <string name="afternoon">Good AfterNoon,</string>
    <string name="evening">Good Evening,</string>
    <string name="night">Good Night,</string>
    <string name="collectdfrom">"Collected from village "</string>
    <string name="under">" under "</string>
    <string name="fillalldata">Fill all data</string>
    <string name="collectordetails">Collector details</string>
    <string name="wait">wait till process finish</string>
    <string name="synced">Synced to server</string>
    <string name="familysynced">Family Data Synced to server</string>
    <string name="servernotresponding">Server was not responding...</string>
    <string name="datamissing">some data is missing please try after some time</string>
    <string name="updateinventory">Update Item</string>
    <string name="paid">Paid</string>
    <string name="fetched">Fetched</string>
    <string name="recieved">Received</string>
    <string name="totalstock">"Total available stock is, "</string>
    <string name="norfo">No RFO found</string>
    <string name="nodata">No data found..</string>
    <string name="sent">"Sent  "</string>
    <string name="invechile">" in vehicle to "</string>
    <string name="updateShipment">Update Shipment</string>
    <string name="chooseyourrole">Choose your role</string>
    <string name="rfo">RFO</string>
    <string name="vssrole">VSS</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="login">LogIn</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="needtochnagerole">Login as different user?</string>
    <string name="logginginas">"Login "</string>
    <string name="filter">Filter</string>
    <string name="status">Status</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="remarks">Add Remarks</string>
    <string name="from" translatable="true">From: </string>
    <string name="To">To: </string>
    <string name="ntfp">NTFP</string>
    <string name="unit">Unit</string>
    <string name="transitfor">Transit To</string>
</resources>