<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Collectors.Collector_Pass">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/green"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/vector_back"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titlebar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mm"
            android:padding="10dp"
            android:text="@string/pass"
            android:textColor="@color/white"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:text="@string/avss"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:text="@string/venkala"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:text="@string/registration"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:text="@string/pottamvu"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:text="@string/passno"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/mm"
        android:text="195"
        android:textColor="@color/red_payment"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:text="@string/mfp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:text="@string/nameandaddress"
        android:textSize="13sp"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view2"
        android:layout_width="2dp"
        android:layout_height="300dp"
        android:background="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/view" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:text="@string/wheretogo"
        android:textSize="13sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/mm"
        android:text="@string/datefromto"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="15dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="2dp"
        android:layout_height="300dp"
        android:background="@color/black"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        android:layout_marginEnd="10dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/nameaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:paddingHorizontal="10dp"
        android:text="@string/xyzcollector"
        android:textSize="13sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/where"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mm"
        android:text="@string/pottamvu"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/mm"
        android:text="@string/daterange"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="15dp" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/view3" />


    <ImageView
        android:id="@+id/statusImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/approoved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

</androidx.constraintlayout.widget.ConstraintLayout>