<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ntfp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ntfp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:singleLine="true"
        android:paddingHorizontal="10dp"
        android:fontFamily="@font/mm"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_marginEnd="4dp"/>
    <TextView
        android:id="@+id/quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quality"
        android:layout_weight="1"
        android:textSize="18sp"
        android:singleLine="true"
        android:paddingHorizontal="10dp"
        android:fontFamily="@font/mm"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_marginEnd="4dp"/>
    <TextView
        android:id="@+id/unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:layout_weight="1"
        android:textSize="18sp"
        android:singleLine="true"
        android:paddingHorizontal="10dp"
        android:fontFamily="@font/mm"/>

</LinearLayout>