<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="25sp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filtertv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="20sp"
        android:fontFamily="@font/mm"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/datetv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/date"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/filtertv"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/datetv">

        <EditText
            android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:drawableStart="@drawable/vector_calender"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:background="@drawable/round_corners_et"
            android:padding="10dp"
            android:layout_marginEnd="3dp"/>
        <EditText
            android:id="@+id/to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/To"
            android:drawableStart="@drawable/vector_calender"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:background="@drawable/round_corners_et"
            android:padding="10dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/statustv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/status"
        android:textSize="15sp"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toBottomOf="@id/dateLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintTop_toBottomOf="@id/statustv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/titletv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/vss"
        android:textSize="15sp"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/statusSpinner"
        app:layout_constraintStart_toStartOf="parent"/>
    <Spinner
        android:id="@+id/title_List"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintTop_toBottomOf="@id/titletv"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="10sp"
        app:layout_constraintTop_toBottomOf="@id/title_List"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:layout_marginHorizontal="15sp"
            android:text="@string/filter"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>