<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/rectangle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swipeup"
        android:textAlignment="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectrfo"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/silver"/>
    <Spinner
        android:id="@+id/spinner_rfo_transit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/sampleSpinner"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transitfor"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/silver"/>
        <Spinner
            android:id="@+id/transitfor"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:entries="@array/transitfor"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/processingCenterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectprocessingcenter"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/silver"/>
        <Spinner
            android:id="@+id/spinner_pc_transit"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otherlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/other"
            android:inputType="textCapCharacters"
            android:digits="qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM"
            android:maxLines="1"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/request_transit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="13dp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/green"
        android:text="@string/requesttransitpass"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="120dp" />
</LinearLayout>
